syntax = "proto3";

package route256.loms;

option go_package = "route256/loms/pkg/loms/v1;loms";

import "google/protobuf/empty.proto";

service LomsService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc ListOrder(ListOrderRequest) returns (ListOrderResponse);
    rpc OrderPayed(OrderPayedRequest) returns (google.protobuf.Empty);
    rpc CancelOrder(CancelOrderRequest) returns (google.protobuf.Empty);
    rpc Stocks(StocksRequest) returns (StocksResponse);
}

message OrderItem {
    uint32 sku = 1;
    uint32 count = 2;
}

message CreateOrderRequest {
    int64 user = 1;
    repeated OrderItem items = 2;
}

message CreateOrderResponse {
    int64 order_id = 1;
}

message ListOrderRequest {
    int64 order_id = 1;
}

enum OrderStatus {
    None = 0;
    New = 1;
    AwaitingPayment = 2;
    Failed = 3;
    Payed = 4;
    Cancelled = 5;
}

message ListOrderResponse {
    OrderStatus status = 1;
    int64 user = 2;
    repeated OrderItem items = 3;
}

message OrderPayedRequest {
    int64 order_id = 1;
}

message CancelOrderRequest {
    int64 order_id = 1;
}

message StocksRequest {
    uint32 sku = 1;
}

message StockItem {
    int64 warehouse_id = 1;
    uint64 count = 2;
}

message StocksResponse {
    repeated StockItem stocks = 1;
}
